added navbar of python basics and added feature for link active in sidenavbar in home page

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <!-- Sidebar -->
     <div class="sidenav">
-      <a href="basics.html" class="active">Python Basics</a>
+      <a class="primary-btn" href="basics.html">Python Basics</a>
       <a href="#base-conversions">Base Conversions</a>
       <a href="#data-structures">Data Structures</a>
       <a href="#math">Math</a>
@@ -1297,5 +1297,6 @@ def flatten(arr):
     <footer>
       <p>lorem ipsum</p>
     </footer>
+    <script src="./app.js"></script>
   </body>
 </html>
