--- a/basics.html
+++ b/basics.html
@@ -10,6 +10,8 @@
     <meta name="theme-color" content="#1e2327" />
     <meta name="color-scheme" content="dark light" />
     <title>Python Basics</title>
+    <link rel="stylesheet" href="./css/style.css" />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -17,14 +19,22 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./css/prism.css" />
-    <script src="./js/prism.js"></script>
+    <script src="./prism.js"></script>
   </head>
 
   <body>
     <!-- Header -->
     <header>
+      <span class="logo">
+        <img
+          src="img/Python-512x512.png"
+          alt="Python logo"
+          height="50"
+          width="50"
+        />
+      </span>
       <div class="content">
-        <a href="#">Python Basics</a>
+        <a href="">Python Basics</a>
       </div>
     </header>
     <span class="banner">
@@ -37,6 +47,9 @@
     </span>
     <!-- Main Content -->
     <div class="container">
+      <div class="button-holder">
+        <a class="btn btn-dark px-4" href="./index.html">Back</a>
+      </div>
       <p>
         Most Windows and Mac computers come with Python pre-installed. You can
         check that via a Command Line search. The particular appeal of Python is
@@ -139,7 +152,6 @@
         NOTE: There are more data types like sets, Dictionaries, complex
         numbers, tuples, boolean.
       </p>
-      <hr />
     </div>
   </body>
 </html>
