changed the top button to an icon

--- a/index.html
+++ b/index.html
@@ -1290,9 +1290,10 @@ def flatten(arr):
       </ol>
     </div>
 
-    <div class="arrow">
-      <button><a href="">Top</a></button>
-    </div>
+    <a class="arrow" href="#"
+      ><img
+        src="https://img.icons8.com/external-prettycons-solid-prettycons/20/000000/external-up-arrow-orientation-prettycons-solid-prettycons.png"
+    /></a>
 
     <footer>
       <p>lorem ipsum</p>
